# fastapi-asyncapi

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  schema.py  setup.cfg  sitemap.xml
.github/workflows/: docs.yml  test.yml
docs/: index.md  mkdocs.yml
docs/docs/: index.md
fastapi_asyncapi/: __init__.py  asyncapi.py  main.py  schema.py
search/: search_index.json
tests/: test_application.py  test_asyncapi.py  test_version.py
